# Hello_Cmake

./: CMakeLists.txt  LICENSE
app/: CMakeLists.txt  main.cpp
include/: print.hpp
lib/: CMakeLists.txt  print.cpp
test/: CMakeLists.txt  print_test.cpp
